# pipeline_process_processo

./: .dockerignore  .gitignore  README.md  config_celery.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  tasks.py  utils.py
api/: main.py  pyproject.toml  routers.py
api/api/process/: process.py
api/api/queue/: config.py  tasks.py
api/queue/: tasks.py
api/v1/process/: process.py  tasks.py
api/v1/router/: process.py  process_pdf.py
backend/: celery.py
front/: main.py  pyproject.toml
front/core/: core.py
