[tool.poetry]
name = "pipeline-process-processo"
version = "0.1.0"
description = ""
authors = ["mielesantos <mielesnts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
streamlit = "^1.41.1"
celery = "^5.4.0"
pdfplumber = "^0.11.5"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
